--- a/index.html
+++ b/index.html
@@ -347,20 +347,7 @@
     </section>
 
  <section id="skills-badges" class="skills-card">
-  <style>
-    /* Card that contains the grid (the light rectangle) */
-    #skills-badges.skills-card{
-      max-width: 980px;         /* keep inside your page layout */
-      margin: 0 auto;
-      padding: 18px 20px;       /* smaller padding so the grid has room */
-      background: #F8FAFC;
-      border: 1px solid #e5e7eb;
-      border-radius: 10px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.08);
-      overflow: hidden;         /* prevents hover lift from overflowing */
-      font-family: "Times New Roman", Times, serif;
-    }
-
+   <h2>🛠️ Tools & Platforms </h2>
     /* Grid: exactly 7 columns, wraps to 2 rows with 14 items */
     #skills-badges .badge-grid{
       display: grid;
@@ -492,7 +479,7 @@
 
     <!-- ✅ Matplotlib (added) -->
     <figure class="skill" style="--bg:#11557C">
-      <div class="icon"><img src="https://cdn.simpleicons.org/matplotlib/FFFFFF" alt="Matplotlib logo"></div>
+      <div class="icon"><img src="images/icons/13.png" alt="Matplotlib logo"></div>
       <figcaption class="label">Matplotlib</figcaption>
     </figure>
 
@@ -503,7 +490,7 @@
 
     <!-- ✅ RStudio (added) -->
     <figure class="skill" style="--bg:#75AADB">
-      <div class="icon"><img src="https://cdn.simpleicons.org/rstudio/FFFFFF" alt="RStudio logo"></div>
+      <div class="icon"><img src="images/icons/14.png" alt="RStudio logo"></div>
       <figcaption class="label">R Studio</figcaption>
     </figure>
   </div>
