--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 
  <section id="skills-badges" class="skills-card">
    <h2>🛠️ Tools & Platforms </h2>
+    <style>
     /* Grid: exactly 7 columns, wraps to 2 rows with 14 items */
     #skills-badges .badge-grid{
       display: grid;
