--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@
         <h1><strong>Khalid-Bin-Shofiq</strong></h1>
         <p class="tagline"><b>Urban &amp; Regional Planner</b></p>
         <p class="description">
-          Urban and Regional Planning graduate with experience in empirical and spatial analysis.
-          Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
+         Welcome! I am an urban planner currently working in a consultancy firm. Having grown up in an organized town and shifting towards
+          a haphazard one shaped my curiosity about the urban growth trends, social inequity, development potentials considering environmental sustainability.
+          I aim to research integrating geo spatial data science and contextual information for making a better liveable and inclusive city for all. 
         </p>
       </div>
     </header>
