--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <p class="description">
          Welcome! I am an urban planner currently working in a consultancy firm. Having grown up in an organized town and shifting towards
           a haphazard one shaped my curiosity about the urban growth trends, social inequity, development potentials considering environmental sustainability.
-          I aim to research integrating geo spatial data science and contextual information for making a better liveable and inclusive city for all. 
+          I aim to research for integrating geo spatial data science and contextual information for making a better liveable and inclusive city for all. 
         </p>
       </div>
     </header>
