--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
       <a href="#education" class="tab-link">Education</a>
       <a href="#skills-badges" class="tab-link">Tools</a>
       <a href="#professional-experience" class="tab-link">Experience</a>
+      <a href="#achievements" class="tab-link">Achievement</a>
       <a href="#contact" class="tab-link">Contact</a>
     </nav>
 
@@ -516,6 +517,23 @@
       <ul>
         <li><a href="Job/sh.html"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
       </ul>
+    </section>
+
+    <!-- Achievements -->
+    <section id="achievements">
+      <h2>Achievements</h2>
+        <p><b>- 2nd Runner Up: </b><i>EnvoFrame SDG Awareness Videography Competition</i>, North South University (2023).</p> 
+        <p><a href="https://drive.google.com/file/d/130041lShgllPN3RiPhry0x18BGaW3SC4/view?usp=drive_link" target="_blank" rel="noopener"><strong>Videography on Ensuring Sustainable Development in Dhaka City ↗</strong></a></p>
+        <p align="center">
+        <img src="./1.png" alt="Social and Resource Map" width="45%">      <img src="./2.jpeg" alt="Social and Resource Map" width="19.5%">
+        </p>
+        <br>
+        <p><b>- Finalist: </b><a href="https://climatescience.org/olympiad/cso23">Climate Science Olympiad (2023)</a></p> 
+        <p align="center">
+        <img src="./Picture1.jpg" alt="Social and Resource Map" width="45%">
+        </p>
+        <br>
+       
     </section>
 
     <!-- Contact -->
