--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
     <nav class="tabs">
       <a href="#home" class="tab-link active">Home</a>
       <a href="#research-areas" class="tab-link">Research</a>
-      <a href="#academic-projects" class="tab-link">Academic Projects</a>
+      <a href="#thesis" class="tab-link">Thesis</a>
       <a href="#education" class="tab-link">Education</a>
+      <a href="#academic-projects" class="tab-link">Academic Projects</a>
       <a href="#skills-badges" class="tab-link">Tools</a>
       <a href="#professional-experience" class="tab-link">Experience</a>
       <a href="#achievements" class="tab-link">Achievement</a>
@@ -225,6 +226,7 @@
           <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a></li>
           <li><a href="https://drive.google.com/file/d/1QferSxE1JlJT88g9bynRx6BPirqv8vDT/view?usp=sharing">3D Flood Simulation 🌊</a></li>
           <li><a href="research/habitat.html"><strong>Habitat Mapping of Coastal Regions of Bangladesh 🗺️</strong></a></li>
+          <li><a href="3DKaliganj.jpg"><strong>3D Land Cover Map</strong></a></li>
         </ul>
       </div>
     </section>
@@ -236,8 +238,16 @@
         <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
         <li><a href="research/regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
         <li><a href="research/tod.html"><strong>Mapping Temporal Variation of TOD Potential in Dhaka Using ACT/PCT</strong></a> ↗</li>
-        <li><a href="research/Trip.html"><strong>COVID-induced trip reduction behavior in United States</strong></a> ↗</li>
+        <li><a href="research/Trip.html"><strong>COVID-Induced Trip Reduction Behavior in United States</strong></a> ↗</li>
       </ul>
+    </section>
+
+     <!-- Thesis -->
+    <section id="thesis">
+      <h2>📗 Thesis</h2>
+      <p align="center">
+        <img src="./thesis.jpg" alt="Social and Resource Map" width="80%">   
+        </p>
     </section>
 
     <!-- Education -->
