--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
     <section id="research-areas">
       <h2>🎯 Research Areas</h2>
       <ul>
-        <li>Deep learning &amp; machine learning–based prediction models</li>
-        <li>Urban growth &amp; land use forecasting</li>
-        <li>Transit-Oriented Development (TOD) potential</li>
-        <li>Remote sensing &amp; environmental sustainability</li>
-        <li>Spatial analysis &amp; land use planning</li>
+        <li>Deep Learning &amp; Machine Learning–based Prediction Models</li>
+        <li>Urban Growth Dynamics &amp; Land Use Planning</li>
+        <li>Transit Oriented Development (TOD) </li>
+        <li>Remote sensing </li>
+        <li>Spatial analysis &amp; Geo-AI Based Solutions</li>
         <li>Qualitative &amp; policy-oriented urban research</li>
       </ul>
     </section>
