--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <section id="thesis">
       <h2>📗 Thesis</h2>
       <p align="center">
-        <img src="./thesis.jpg" alt="Social and Resource Map" width="80%">   
+        <img src="./Thesis.jpg" alt="Social and Resource Map" width="80%">   
         </p>
     </section>
 
