--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         <li>Deep Learning &amp; Machine Learning–based Prediction Models</li>
         <li>Urban Growth Dynamics &amp; Land Use Planning</li>
         <li>Transit Oriented Development (TOD) </li>
-        <li>Remote sensing </li>
-        <li>Spatial analysis &amp; Geo-AI Based Solutions</li>
-        <li>Qualitative &amp; policy-oriented urban research</li>
+        <li>Remote Sensing </li>
+        <li>Spatial Analysis &amp; Geo-AI Based Solutions</li>
+        <li>Qualitative &amp; Policy-oriented Urban Research</li>
       </ul>
     </section>
 
